@@ -30,6 +30,8 @@ class Map {
 
     // Have a random number generator
     default_random_engine generator;
+    // The seed that was used to generate the map
+    int seed;
 
     // Private methods
 
